--- a/frontend/javascripts/app/views/home.html
+++ b/frontend/javascripts/app/views/home.html
@@ -62,7 +62,7 @@
           <div ng-repeat="exp in experiments " class="ovtrunc home-page-exp-tile">
             <div ng-mouseenter="mouseOver = true" class="home-page-tile-text ovtrunc" ng-mouseleave="mouseOver = false" ng-class="{'home-page-tile-text': true, 'home-page-tile-text-hover': mouseOver && !deleteMode}" ng-click="HomeCtrl.openExperiment(exp.experiment)">
               <!--<a ng-if="!exp.experiment.started_at" href="/#/experiments/{{exp.experiment.id}}/run-experiment?chart=amplification">-->
-              <a class="experiment-links" ng-if="!exp.experiment.started_at && exp.experiment.type !== 'test_kit'" href="/#/edit-protocol/{{exp.experiment.id}}">
+              <div class="experiment-links">
                 <div class="home-page-exp-name B1B">
                   {{exp.experiment.name}}
                 </div>
@@ -71,8 +71,8 @@
                 <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.time_valid">Run {{exp.experiment.started_at | amCalendar}}, #{{exp.experiment.id}}</span>
                 <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && !exp.experiment.time_valid">Run previously, #{{exp.experiment.id}}</span>
                 <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>
-              </a>
-              <a class="experiment-links" ng-if="!exp.experiment.started_at && exp.experiment.type === 'test_kit'" ui-sref="pika_test.setWellsA({id: exp.experiment.id})">
+              </div>
+<!--               <a class="experiment-links" ng-if="!exp.experiment.started_at && exp.experiment.type === 'test_kit'" ui-sref="pika_test.setWellsA({id: exp.experiment.id})">
                 <div class="home-page-exp-name B1B">
                   {{exp.experiment.name}}
                 </div>
@@ -83,7 +83,6 @@
                 <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>
               </a>
               <a class="experiment-links" ng-if="exp.experiment.started_at && exp.experiment.type !== 'test_kit'" href="/#/experiments/{{exp.experiment.id}}/run-experiment?chart=amplification">
-              <!-- <a class="experiment-links" ng-if="exp.experiment.started_at" href="/#/experiments/{{exp.experiment.id}}/run-experiment?chart=amplification"> -->
                 <div class="home-page-exp-name B1B">
                   {{exp.experiment.name}}
                 </div>
@@ -112,7 +111,7 @@
                 <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.time_valid">Run {{exp.experiment.started_at | amCalendar}}, #{{exp.experiment.id}}</span>
                 <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && !exp.experiment.time_valid">Run previously, #{{exp.experiment.id}}</span>
                 <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>
-              </a>
+              </a> -->
             </div>
             <delete-mode mode="deleteMode" experiment="exp.experiment" delete-exp="HomeCtrl.deleteExperiment(exp)"></delete-mode>
           </div>
