--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -194,8 +194,9 @@
     margin-left: 0px;
     margin-right: 20px;
     .item-switch {
-      display: inline-block;
+      display: block;
       margin-left: $item_switch_gap;
+      margin-bottom: 5px; 
       .switch {
         height: 15px;
         margin-top: -2px;
@@ -238,9 +239,9 @@
       }
     }
     .item-switch-channel {
-      display: inline-block;
+      display: block;
       margin-left: 20px;
-      float: left;
+      // float: left;
       .switch {
         height: 15px;
         margin-top: -2px;
@@ -563,3 +564,456 @@
 // ::-webkit-scrollbar-thumb:hover {
 //   background: #555;
 // }
+
+.experiment-chart-state-active {
+  font-family: 'dinot';
+  .header {
+    .name-container {
+      width: 80%;
+    }
+  }
+  .amplification-options {
+    cursor: pointer;
+    color: #00b3ed !important;
+  }
+  .curve-header {
+    height: 100px;
+    display:block;
+    background: white;
+    
+    .plot-type-buttons {
+      width: 140px !important;
+      .buttons-wrapper {
+        .button {
+          width: 70px !important;
+        }
+      }
+    }
+    .curve-name {
+      padding-left: 15px;
+      display: block;
+      float: left;
+      margin-top: 30px;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+    }
+
+    .plot-options{
+      padding-right: 10px;
+      display: block;
+      float: right;
+      margin-top: 15px;
+    }
+
+    .form-horizontal .editable
+    { 
+      padding-top: 5px;
+      display:inline-block;
+    }
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+      position: relative;
+      display: inline-block;
+      /* Dropdown Button */
+      .dropbtn {
+        background-color: white;
+        color: black;
+        padding: 6px;
+        // font-size: 16px;
+        // font-family: 'dinot-regular';
+        //font-weight: 300;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+        width: 120px;
+        border: 1px solid black;
+        .arrow-down{
+          float: right;
+          width: 10px;
+          padding-top: 3px;
+        }
+      }
+      /* Dropdown Content (Hidden by Default) */
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 120px;
+        font-family: 'dinot-regular';
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      /* Links inside the dropdown */
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        font-family: 'dinot-regular';
+      }
+
+      /* Change color of dropdown links on hover */
+      .dropdown-content a:hover {
+        background-color: #f1f1f1;
+      }
+
+      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+      .show {
+        display:block;
+      }
+    }
+
+    .ampli-toggles {
+      //width: 45%;
+      padding-bottom: 5px;
+      padding-right: 0px;
+      .col-md-6,
+      .col-sm-6 {
+        padding-left: 0px;
+        
+        // padding-right: 0;
+        // &:last-of-type {
+        //   padding-right: 15px;
+        // }
+      }
+    }
+  }
+  .curve-body {
+    background-color: transparent;
+    padding: 10px;
+
+    display:flex;
+    // min-height: 600px;
+    // height: 610px;
+    .curve-plot {
+      background-color: #fff;
+      padding: 10px;
+      // display: inline-block;
+      // width: 85%;
+      float: left;
+      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+      
+      // height: 100%;
+
+      .chart-wrapper{
+        width:100%; 
+        height: 100%; 
+        position: relative;
+
+        .vertical-hr{
+          position: absolute;
+          width: 1px;
+          border-left: 1px solid #888;
+          height: 100%;
+          left: 60px;
+          top: 0px;
+        }
+
+        .horizontal-hr{          
+          position: absolute;
+          height: 0px;
+          border-bottom: 1px solid #888;
+          width: 100%;
+          bottom: 59px;
+        }
+
+        .zoom-box{
+          position: absolute;
+          bottom: 0px;
+          width: 60px;
+          height: 60px;
+          .zoom-button-box{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            .zoom-button{
+              font-size: 20px;
+              position: absolute;
+              width: 30px;
+              height: 35px;
+              border-radius: 50%;
+              outline: none;
+              color: #000;
+              &.button-plus{
+                top: 2px;
+                text-align: right;
+              }
+
+              &.button-minus{
+                bottom: 2px;
+                right: 1px;
+                text-align: left;
+              }
+            }
+          }
+
+          .zoom-button-divider{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            padding: 10px;
+          }
+        }
+      }
+    }
+    .additional-info {
+      // position: relative;
+      // display: inline-block;
+      width: 18%;
+      // height: 100%;
+      // margin-left: 20px;
+      padding-right: 0px;
+      padding-left: 10px;
+      margin: 0px;
+      background: transparent;
+      flex-grow: 1;
+      float: left;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      div {
+        width: 100%;
+        background-color: #fff;
+        padding: 0px;
+      }
+
+      .selection-set{
+        padding: 0; 
+        background: transparent;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+      }
+      .parameters {
+        padding: 0px;
+        
+        .header {
+          color: #fff;
+          background-color: #000;
+          padding: 10px;
+
+          width: 100%;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+        div {
+          padding: 10px;
+          .parameters-table {
+            width: 100%;
+            color: #000;
+            background-color: #fff;
+            margin: 0px;
+          }
+        }
+      }
+      .info {
+        color: #595959;
+        // background-color: #000;
+        margin-top: 1px;
+      }
+      
+      .info1 {
+        color: #fff;
+        background-color: #595959;
+        margin-top: 2px;
+      }
+
+      .targets-set {
+        // position: absolute;
+        position: relative;
+        // bottom: -55px;
+        background-color: #fff;
+        //margin-left: 20px;
+        // margin-bottom: -66px;
+        padding: 0px;
+        display: block;
+        width: 100%;
+        height: 215px;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
+
+        .target-box{
+          padding: 5px 10px;
+          overflow: auto;
+          height: calc(100% - 38px);
+        }
+
+        .targets-table {
+          width: 100%;
+          td {
+            font-family: "Dinot";
+            font-size: 13px;
+            // line-height: 20px;
+            .target-name{
+              width: 90px;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;              
+            }
+          }
+          .td-tik {
+            min-width: 30px;
+            text-align: right;
+            cursor: pointer;
+            span {
+              img {
+                width: 10px;
+                height: 10px;
+                margin-bottom: 3px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .content.row {
+    margin-left: 0;
+    margin-right: 0;
+    .plot-options {
+      p {
+        margin-bottom: 5px;
+      }
+      text-align: left;
+      padding-right: 30px;
+      .plot-option {
+        display: inline-block;
+        text-align: left;
+      }
+    }
+  }
+  
+  .table-container {
+    border-left: 2px solid black;
+    min-width: 400px;
+    width: 100%; 
+    height: 100%; 
+    padding-right: 0; 
+    padding-left: 0; 
+    margin-top:0px; 
+    overflow: auto; 
+    background: #fff;
+    
+    .type-td{
+      text-align: center;
+      vertical-align: middle;
+      .type-span{
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        border: none;
+        border-radius: 0;
+        // font-family: 'dinot-Regular';
+        // font-size: 14px;
+      }
+    }
+
+    // .target-span{
+    //  font-family: 'dinot-Regular';
+    //   font-size: 16px;
+    // }
+
+    input {
+      outline: none;
+      border: none;
+      // font-family: 'dinot-Regular';
+      // font-size: 12px;
+      //width: 140px;
+    }
+    table {
+      width: 100%;
+      background: white;
+      // box-shadow: -1px 0px 1px $lightgray;
+      th {
+        background-color: lighten($gray, 15%);
+        // border-left: 1px solid lighten($lightgray, 15%);
+        // border-bottom: 1px solid lighten($lightgray, 15%);
+        color: #fff;
+        padding: 10px 15px;
+        &.channel-1 {
+          background-color: $blue;
+        }
+        &.channel-2 {
+          background-color: $green;
+        }
+      }
+      tr {
+        // border-bottom: 1px solid #eee;
+        td {
+          // border-left: 1px solid lighten($lightgray, 15%);
+          // border-bottom: 1px solid lighten($lightgray, 15%);
+          color: $lightgray;
+          padding: 7px 3px;
+          text-align: center;
+          &:first-of-type {
+            color: $gray;
+            font-weight: bold;
+          }
+          &:last-of-type {
+            // border-right: 1px solid lighten($lightgray, 15%);
+            border-right: none;
+          }
+          .text {
+            display: inline-block;
+            vertical-align: middle;
+          }
+          .width1 {
+            padding: 5px 0px 5px 0px;
+          }
+          .dummy-placeholder {
+            padding-right: 3px;
+            padding-left: 3px;
+          }
+        }
+
+        &.selected {
+          cursor: pointer;
+          td {
+            color: #000;
+          }
+        }
+
+        &.active{
+          td{
+            background: #09b0ef;
+          }
+        }
+      }
+    }
+  }
+
+  .omit_checkbox {
+    color: red;
+    width: 50px !important;
+  }
+
+  .one-line-span{
+    white-space: nowrap;
+    text-overflow: ellipsis;    
+  }
+
+  .checkbox-wrapper{
+    display: inline-block;
+    cursor: pointer;      
+
+    label.outer-line{
+      width: 16px;
+      height: 16px;
+      overflow: hidden;
+      border-radius: 2px;
+      border: 1px solid #2f2f2f;
+      vertical-align: middle;
+      margin: 0;
+      cursor: pointer;
+      padding: 1px;   
+      background: #fff;   
+    }
+
+    &.selected{
+      label.outer-line{
+        background: url(/images/omit_check.svg) no-repeat center center #fff;
+        background-size: 10px 10px;
+      }
+    }
+  }
+}
