--- a/frontend/javascripts/app/views/experiment/melt-curve.html
+++ b/frontend/javascripts/app/views/experiment/melt-curve.html
@@ -214,7 +214,7 @@ limitations under the License.
                 <span 
                   ng-if="color_by==='target'" 
                   class="B2-Amplification dot" 
-                  ng-attr-style="background-color: {{targets[$index].color}}"></span>
+                  ng-attr-style="background-color: {{targets[chartConfig.channels * (well_item.well_num - 1) + well_item.channel - 1].color}}"></span>
               </td>
               <td class="B2-Amplification" style="border-top-left-radius: 3px;border-bottom-left-radius: 3px;">
                 <div 
