--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -815,6 +815,21 @@
           overflow: hidden;
           text-overflow: ellipsis;
         }
+
+        label.data-point-info{
+          width: 20px;
+          height: 20px;
+          text-align: center;
+          border: 1px solid #fff;
+          border-radius: 50%;
+          margin: 0 5px 0 2px;
+
+          &>label{
+            color: #fff;
+            font-weight: 300;
+          }
+        }
+
         div {
           padding: 10px;
           .parameters-table {
