fix amp curve data

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -142,7 +142,7 @@ limitations under the License.
                             <td class="B1Mv-Amplification">{{label_dF_dC}}</td>
                           </tr>
                           <tr>
-                            <td class="B1v-Amplification">d<sup>2</sup>/dc<sup>2</sup>:</td>
+                            <td class="B1v-Amplification">d<sup>2</sup>F/dc<sup>2</sup>:</td>
                             <td class="B1Mv-Amplification">{{label_D2_dc2}}</td>
                           </tr>
                         </table>
