fixing drop-down menu resize issue

--- a/frontend/javascripts/app/views/plate-layout.html
+++ b/frontend/javascripts/app/views/plate-layout.html
@@ -37,7 +37,7 @@ limitations under the License.
                 </div>
             </div>
 
-            <div class="plate-layout-box">
+            <div class="plate-layout-box" full-height  offset="160">
                 <div class="plate-layout-details">
                     <div class="plate-layout-frame">
                         <div class="plate-layout-wells">
