--- a/frontend/stylesheets/run-experiment.scss
+++ b/frontend/stylesheets/run-experiment.scss
@@ -1,6 +1,9 @@
 .run-experiment-state-active {
   min-width: 1205px;
   .chart-screens-container {
+    flex-grow: 1; 
+    position: relative; 
+    overflow:auto;    
     // min-height: 400px;
     .chart-error {
       position: absolute;
