--- a/frontend/javascripts/app/views/experiment/temperature-logs.html
+++ b/frontend/javascripts/app/views/experiment/temperature-logs.html
@@ -42,8 +42,8 @@
           </div>
         </div>
       </div>
-      <div class="temperature-log-chart" style="display: flex; flex-grow: 1; flex-direction: column;">
-        <div style="flex-grow: 1; position: relative;" full-height offset="37 + 50 + 210" min="300">
+      <div class="temperature-log-chart" style="display: flex; flex-grow: 1; flex-direction: column; max-height: 550px;">
+        <div style="flex-grow: 1; position: relative;">
           <!-- <div class="vertical-text B1B">Temperature (&deg;C)</div> -->
           <div class="chart-container" full-width offset="40" style="height: 100%; position: absolute;">
             <div full-height force='true' min='300'>
