fix thermal performance diagnostic page layout

--- a/frontend/javascripts/dynexp/thermal_performance_diagnostic/views/analyze.html
+++ b/frontend/javascripts/dynexp/thermal_performance_diagnostic/views/analyze.html
@@ -1,6 +1,6 @@
-<div class="text-center">
+<div class="text-center analyze-title">
   <h2>Diagnostic complete</h2>
-  <p>{{experiment.started_at | date: 'MMM. d, yyyy hh:mm:ssa'}}</p>
+  <p>{{experiment.started_at | fixedDate}}</p>
 </div>
 <div ng-show="!analyzedExp" class="text-center">
   Analyzing results. Please wait ... <img src="/images/loading.gif">
