--- a/frontend/javascripts/dynexp/thermal_performance_diagnostic/views/diagnostic.html
+++ b/frontend/javascripts/dynexp/thermal_performance_diagnostic/views/diagnostic.html
@@ -49,6 +49,6 @@
   </div>
   <!-- dismiss button -->
   <div ng-show="!!experiment.completed_at" class="text-center" style="padding: 70px 0;">
-    <a href="/#/settings/" class="button">CLOSE</a>
+    <a href="/#/settings/" class="button" style="margin: 0;">CLOSE</a>
   </div>
 </div>
