--- a/frontend/stylesheets/dynexp/thermal-performance-diagnostic.scss
+++ b/frontend/stylesheets/dynexp/thermal-performance-diagnostic.scss
@@ -124,4 +124,8 @@
     transform: rotateX(180deg);
     width: 100%;
   }
+  .analyze-title{
+    margin-top: 70px;
+    margin-bottom: 10px;    
+  }
 }
