--- a/frontend/javascripts/dynexp/optical_test_dual_channel/views/page-4.html
+++ b/frontend/javascripts/dynexp/optical_test_dual_channel/views/page-4.html
@@ -1,5 +1,5 @@
-<div class="step-5">
-  <p class="step"><b>STEP 3</b>/7</p>
+<div class="step-5" class="text-center">
+  <p class="step" style="text-align: center;"><b>STEP 3</b>/7</p>
   <h2>Reading Fluorescence</h2>
   <div class="machine-icon">
     <img src="/images/dynexp/machine-idle.png">
