--- a/frontend/javascripts/dynexp/optical_cal/views/step-3.html
+++ b/frontend/javascripts/dynexp/optical_cal/views/step-3.html
@@ -1,5 +1,5 @@
-<div class="step-3">
-  <p class="step"><b>STEP 3</b>/6</p>
+<div class="step-3 text-center">
+  <p class="step" style="text-align: center;"><b>STEP 3</b>/6</p>
   <h2>Heating + Data Collection</h2>
 
   <div class="machine-heating-icon">
