--- a/frontend/javascripts/dynexp/optical_cal/views/step-6.html
+++ b/frontend/javascripts/dynexp/optical_cal/views/step-6.html
@@ -1,5 +1,5 @@
-<div class="step-6" ng-show="experiment.completion_status === 'success' && valid">
-  <p class="step"><b>STEP 6</b>/6</p>
+<div class="step-6 text-center" ng-show="experiment.completion_status === 'success' && valid">
+  <p class="step" style="text-align: center;"><b>STEP 6</b>/6</p>
   <h2>Calibration Complete</h2>
 
   <div class="machine-icon">
@@ -16,8 +16,8 @@
   </div>
 </div>
 
-<div class="step-6" ng-show="experiment.completion_status !== 'success' || !valid">
-  <p class="step"><b>STEP 6</b>/6</p>
+<div class="step-6 text-center" ng-show="experiment.completion_status !== 'success' || !valid">
+  <p class="step" style="text-align: center;"><b>STEP 6</b>/6</p>
   <h2>Calibration Failed</h2>
 
   <div class="machine-icon">
