--- a/frontend/javascripts/dynexp/optical_test_dual_channel/views/page-3.html
+++ b/frontend/javascripts/dynexp/optical_test_dual_channel/views/page-3.html
@@ -1,5 +1,5 @@
-<div class="step-2 text-center">
-  <p class="step" style="text-align: center;"><b>STEP 2</b>/7</p>
+<div class="step-2">
+  <p class="step"><b>STEP 2</b>/7</p>
   <h2>Insert Water Strips</h2>
 
   <div class="row tubes-container">
