--- a/frontend/javascripts/dynexp/dual_channel_optical_cal_v2/views/reading-fam.html
+++ b/frontend/javascripts/dynexp/dual_channel_optical_cal_v2/views/reading-fam.html
@@ -1,5 +1,5 @@
-<div class="step-5 text-center" ng-show="!isWarmingUp">
-  <p class="step" style="text-align: center;"><b>STEP 6</b>/9</p>
+<div class="step-5" ng-show="!isWarmingUp">
+  <p class="step"><b>STEP 6</b>/9</p>
   <h2>Reading Fluorescence</h2>
   <div class="machine-icon">
     <img src="/images/dynexp/machine-idle.png">
@@ -17,8 +17,8 @@
 
   </div>
 </div>
-<div class="step-3 text-center" ng-show="isWarmingUp">
-  <p class="step" style="text-align: center;"><b>STEP 6</b>/9</p>
+<div class="step-3" ng-show="isWarmingUp">
+  <p class="step"><b>STEP 6</b>/9</p>
   <h2>Heating</h2>
 
   <div class="machine-heating-icon">
